[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/ld52/ld52_def_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/ld52/ld52_def_xxsmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://components/UpgradeStatPanel.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.576471, 0, 0, 1 )

[node name="UpgradeStatPanel" type="MarginContainer"]
margin_right = 430.0
margin_bottom = 64.0
script = ExtResource( 3 )

[node name="BuyButton" type="Button" parent="."]
margin_right = 430.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/disabled = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 430.0
margin_bottom = 64.0
rect_min_size = Vector2( 430, 64 )
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 428.0
margin_bottom = 62.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 15.0
margin_right = 150.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Unit health"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 270.0
margin_bottom = 60.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 20.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 0.454902, 1, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_top = 20.0
margin_right = 44.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 0, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_top = 20.0
margin_right = 68.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 0, 0, 0, 1 )

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_top = 20.0
margin_right = 92.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 0, 0, 0, 1 )

[node name="ColorRect5" type="ColorRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_top = 20.0
margin_right = 116.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 4
color = Color( 0, 0, 0, 1 )

[node name="CostLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 274.0
margin_top = 15.0
margin_right = 325.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 1 )
text = "010"

[node name="CattleJuiceLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 329.0
margin_top = 22.0
margin_right = 407.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 2 )
text = "Cattle Juice"
valign = 2

[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
